# goni

./: AGENTS.md  BROKEN-LINK-FIXES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  GOVERNANCE.md  MOVE-DELETE-PLAN.md  NEXT_STEPS.md  PERF.md  README.md  SCOPE-CONTRACT.md  SECURITY.md  VISION.md
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
api/: README.md
benchmarks/: README.md
blueprint/: AGENTS.md  NOTICE  README.md  ROADMAP.md  tasks
docs/: 00-system-map.md  01-docs-rules.md  ARCHITECTURE.md  (+23 more)
software/kernel/: AGENTS.md  Cargo.toml
software/kernel/goni-agent/src/: lib.rs
software/kernel/goni-cli/: Cargo.toml
software/kernel/goni-cli/src/: main.rs
software/kernel/goni-context/: Cargo.toml
software/kernel/goni-context/src/: lib.rs
software/kernel/goni-core/: Cargo.toml
software/kernel/goni-core/src/: lib.rs
software/kernel/goni-http/: Cargo.toml
software/kernel/goni-http/src/: main.rs
software/kernel/goni-infer/: Cargo.toml
software/kernel/goni-infer/src/: http_vllm.rs  lib.rs
software/kernel/goni-receipts/: Cargo.toml
software/kernel/goni-router/: Cargo.toml
software/kernel/goni-router/src/: lib.rs
software/kernel/goni-sched/: Cargo.toml
software/kernel/goni-sched/src/: lib.rs
software/kernel/goni-schema/src/: lib.rs
software/kernel/goni-schema/tests/: txt_axiom.rs
software/kernel/goni-store/: Cargo.toml
software/kernel/goni-store/src/: lib.rs  qdrant.rs
software/kernel/goni-tools/: Cargo.toml
software/kernel/goni-tools/src/: lib.rs
software/kernel/goni-types/src/: lib.rs
(+379 files in other folders)
